logs/dag_id=Summer_Warped_ETL/run_id=manual__2023-05-08T16:02:34.709403+00:00/task_id=LoadData.LoadCalendar/attempt=2.log
[2023-05-08T16:03:54.705+0000] {taskinstance.py:1125} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: Summer_Warped_ETL.LoadData.LoadCalendar manual__2023-05-08T16:02:34.709403+00:00 [queued]>
[2023-05-08T16:03:54.711+0000] {taskinstance.py:1125} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: Summer_Warped_ETL.LoadData.LoadCalendar manual__2023-05-08T16:02:34.709403+00:00 [queued]>
[2023-05-08T16:03:54.711+0000] {taskinstance.py:1331} INFO - Starting attempt 2 of 3
[2023-05-08T16:03:54.720+0000] {taskinstance.py:1350} INFO - Executing <Task(PostgresOperator): LoadData.LoadCalendar> on 2023-05-08 16:02:34.709403+00:00
[2023-05-08T16:03:54.724+0000] {standard_task_runner.py:57} INFO - Started process 609 to run task
[2023-05-08T16:03:54.730+0000] {standard_task_runner.py:84} INFO - Running: ['***', 'tasks', 'run', 'Summer_Warped_ETL', 'LoadData.LoadCalendar', 'manual__2023-05-08T16:02:34.709403+00:00', '--job-id', '2425', '--raw', '--subdir', 'DAGS_FOLDER/warped-dag.py', '--cfg-path', '/tmp/tmpshepz1am']
[2023-05-08T16:03:54.730+0000] {standard_task_runner.py:85} INFO - Job 2425: Subtask LoadData.LoadCalendar
[2023-05-08T16:03:54.770+0000] {task_command.py:410} INFO - Running <TaskInstance: Summer_Warped_ETL.LoadData.LoadCalendar manual__2023-05-08T16:02:34.709403+00:00 [running]> on host 7b4753e133cb
[2023-05-08T16:03:54.825+0000] {taskinstance.py:1570} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='Ananta Moharana' AIRFLOW_CTX_DAG_ID='Summer_Warped_ETL' AIRFLOW_CTX_TASK_ID='LoadData.LoadCalendar' AIRFLOW_CTX_EXECUTION_DATE='2023-05-08T16:02:34.709403+00:00' AIRFLOW_CTX_TRY_NUMBER='2' AIRFLOW_CTX_DAG_RUN_ID='manual__2023-05-08T16:02:34.709403+00:00'
[2023-05-08T16:03:54.828+0000] {sql.py:262} INFO - Executing: 
                INSERT INTO calendar (date, month, monthname,dayofmonth,dayofweek,dayname,quarter)
                VALUES ('2023-05-08', 5, 'May',8,0,'Monday',2)
                ON CONFLICT (2023-05-08) DO NOTHING;
                 
[2023-05-08T16:03:54.835+0000] {base.py:73} INFO - Using connection ID '***' for task execution.
[2023-05-08T16:03:54.874+0000] {base.py:73} INFO - Using connection ID '***' for task execution.
[2023-05-08T16:03:54.887+0000] {sql.py:375} INFO - Running statement: 
                INSERT INTO calendar (date, month, monthname,dayofmonth,dayofweek,dayname,quarter)
                VALUES ('2023-05-08', 5, 'May',8,0,'Monday',2)
                ON CONFLICT (2023-05-08) DO NOTHING;
                 , parameters: None
[2023-05-08T16:03:54.889+0000] {taskinstance.py:1847} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/operators/sql.py", line 274, in execute
    **extra_kwargs,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 349, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 380, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "2023"
LINE 4:                 ON CONFLICT (2023-05-08) DO NOTHING;
                                     ^

[2023-05-08T16:03:54.896+0000] {taskinstance.py:1373} INFO - Marking task as UP_FOR_RETRY. dag_id=Summer_Warped_ETL, task_id=LoadData.LoadCalendar, execution_date=20230508T160234, start_date=20230508T160354, end_date=20230508T160354
[2023-05-08T16:03:54.902+0000] {standard_task_runner.py:109} ERROR - Failed to execute job 2425 for task LoadData.LoadCalendar (syntax error at or near "2023"
LINE 4:                 ON CONFLICT (2023-05-08) DO NOTHING;
                                     ^
; 609)
[2023-05-08T16:03:54.940+0000] {local_task_job_runner.py:232} INFO - Task exited with return code 1
[2023-05-08T16:03:54.959+0000] {taskinstance.py:2674} INFO - 0 downstream tasks scheduled from follow-on schedule check
